--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
     <input type="text" id="searchBox" onkeyup="filter()" placeholder="Search for a recipe..">
     <ul id="recipes">
         <li class="recipe desserts"><a href="HTML/desserts/Banana Bread.html">Banana Bread</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/Biscuits Ã  la Pistache.html">Biscuits Ã  la Pistache</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Biscuits à la Pistache.html">Biscuits à la Pistache</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Blanquette Exotique.html">Blanquette Exotique</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Boeuf Bourguignon.html">Boeuf Bourguignon</a></li>
         <li class="recipe breads"><a href="HTML/breads/Brioche.html">Brioche</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Brownie.html">Brownie</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/BÃ»che de NoÃ«l de MÃ©mÃ©e.html">BÃ»che de NoÃ«l de MÃ©mÃ©e</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Bûche de Noël de Mémée.html">Bûche de Noël de Mémée</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Cabillaud et sa Sauce Mamie PO.html">Cabillaud et sa Sauce Mamie PO</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Cake au Citron.html">Cake au Citron</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/CannelÃ©s.html">CannelÃ©s</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Cannelés.html">Cannelés</a></li>
         <li class="recipe starters"><a href="HTML/starters/Canneles Pesto Parmesan.html">Canneles Pesto Parmesan</a></li>
-        <li class="recipe main-courses"><a href="HTML/main_courses/Carottes BraisÃ©es.html">Carottes BraisÃ©es</a></li>
+        <li class="recipe main-courses"><a href="HTML/main_courses/Carottes Braisées.html">Carottes Braisées</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Charlotte Poire Chocolat.html">Charlotte Poire Chocolat</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Charlotte aux Fraises.html">Charlotte aux Fraises</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Chili Con Carne.html">Chili Con Carne</a></li>
@@ -139,15 +139,15 @@
         <li class="recipe desserts"><a href="HTML/desserts/Compote de Pommes.html">Compote de Pommes</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Cookies Classiques.html">Cookies Classiques</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Cookies Pistache Chocolat.html">Cookies Pistache Chocolat</a></li>
-        <li class="recipe ice-creams"><a href="HTML/ice_creams/CrÃ¨me GlacÃ©e Banane.html">CrÃ¨me GlacÃ©e Banane</a></li>
-        <li class="recipe ice-creams"><a href="HTML/ice_creams/CrÃ¨me GlacÃ©e Vanille.html">CrÃ¨me GlacÃ©e Vanille</a></li>
-        <li class="recipe basics"><a href="HTML/basics/CrÃ¨me PatissiÃ¨re.html">CrÃ¨me PatissiÃ¨re</a></li>
-        <li class="recipe main-courses"><a href="HTML/main_courses/Crumble Ã  la Courgette.html">Crumble Ã  la Courgette</a></li>
+        <li class="recipe ice-creams"><a href="HTML/ice_creams/Crème Glacée Banane.html">Crème Glacée Banane</a></li>
+        <li class="recipe ice-creams"><a href="HTML/ice_creams/Crème Glacée Vanille.html">Crème Glacée Vanille</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Crème Patissière.html">Crème Patissière</a></li>
+        <li class="recipe main-courses"><a href="HTML/main_courses/Crumble à la Courgette.html">Crumble à la Courgette</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Crumble aux Pommes.html">Crumble aux Pommes</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Epinards.html">Epinards</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Filet Mignon au Curry.html">Filet Mignon au Curry</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Financiers aux Amandes.html">Financiers aux Amandes</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/Flans aux Å’ufs.html">Flans aux Å’ufs</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Flans aux Œufs.html">Flans aux Œufs</a></li>
         <li class="recipe starters"><a href="HTML/starters/Garlic and Cheese Drop Biscuits.html">Garlic and Cheese Drop Biscuits</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Gateau Ananas.html">Gateau Ananas</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Gateau Chocolat Mamie Lisette.html">Gateau Chocolat Mamie Lisette</a></li>
@@ -158,25 +158,27 @@
         <li class="recipe main-courses"><a href="HTML/main_courses/Hachi Parmentier.html">Hachi Parmentier</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Lasagnes Bolognaise.html">Lasagnes Bolognaise</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Lentilles Saucisse.html">Lentilles Saucisse</a></li>
-        <li class="recipe main-courses"><a href="HTML/main_courses/Marinade pour de lâ€™Ã‰chine de Porc.html">Marinade pour de lâ€™Ã‰chine de Porc</a></li>
+        <li class="recipe main-courses"><a href="HTML/main_courses/Marinade pour de l’Échine de Porc.html">Marinade pour de l’Échine de Porc</a></li>
         <li class="recipe basics"><a href="HTML/basics/Mayonnaise.html">Mayonnaise</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Merveille Framboises Pistache.html">Merveille Framboises Pistache</a></li>
-        <li class="recipe starters"><a href="HTML/starters/Moelleux Tomates SÃ©chÃ©es.html">Moelleux Tomates SÃ©chÃ©es</a></li>
+        <li class="recipe starters"><a href="HTML/starters/Moelleux Tomates Séchées.html">Moelleux Tomates Séchées</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Moelleux au Chocolat de Mamie PO.html">Moelleux au Chocolat de Mamie PO</a></li>
         <li class="recipe starters"><a href="HTML/starters/Mousse Betterave.html">Mousse Betterave</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Muqueca de Peixe.html">Muqueca de Peixe</a></li>
-        <li class="recipe starters"><a href="HTML/starters/Å’ufs Mimosa.html">Å’ufs Mimosa</a></li>
+        <li class="recipe starters"><a href="HTML/starters/Œufs Mimosa.html">Œufs Mimosa</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Osso Bucco de veau.html">Osso Bucco de veau</a></li>
-        <li class="recipe breads"><a href="HTML/breads/Pain FranÃ§ais.html">Pain FranÃ§ais</a></li>
+        <li class="recipe breads"><a href="HTML/breads/Pain Français.html">Pain Français</a></li>
+        <li class="recipe breads"><a href="HTML/breads/Pain au blé complet.html">Pain au blé complet</a></li>
+        <li class="recipe breads"><a href="HTML/breads/Pain aux Céréales.html">Pain aux Céréales</a></li>
         <li class="recipe breads"><a href="HTML/breads/Pain de base.html">Pain de base</a></li>
         <li class="recipe starters"><a href="HTML/starters/Pao de Queijo.html">Pao de Queijo</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te BrisÃ©e.html">PÃ¢te BrisÃ©e</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te SablÃ©e.html">PÃ¢te SablÃ©e</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te Ã  CrÃªpes.html">PÃ¢te Ã  CrÃªpes</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te Ã  Gaufres.html">PÃ¢te Ã  Gaufres</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te Ã  Pancakes.html">PÃ¢te Ã  Pancakes</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te Ã  Pizza.html">PÃ¢te Ã  Pizza</a></li>
-        <li class="recipe basics"><a href="HTML/basics/PÃ¢te de Pistache.html">PÃ¢te de Pistache</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte Brisée.html">Pâte Brisée</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte Sablée.html">Pâte Sablée</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte à Crêpes.html">Pâte à Crêpes</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte à Gaufres.html">Pâte à Gaufres</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte à Pancakes.html">Pâte à Pancakes</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte à Pizza.html">Pâte à Pizza</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Pâte de Pistache.html">Pâte de Pistache</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Pavlova Fruits Rouges.html">Pavlova Fruits Rouges</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Petits Pains au Lait.html">Petits Pains au Lait</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Pommes de Terre.html">Pommes de Terre</a></li>
@@ -187,29 +189,29 @@
         <li class="recipe starters"><a href="HTML/starters/Salade Concombre Pomme Avocat.html">Salade Concombre Pomme Avocat</a></li>
         <li class="recipe starters"><a href="HTML/starters/Salade de Concombres.html">Salade de Concombres</a></li>
         <li class="recipe starters"><a href="HTML/starters/Salade de Tomates.html">Salade de Tomates</a></li>
-        <li class="recipe basics"><a href="HTML/basics/Sauce BÃ©chamel.html">Sauce BÃ©chamel</a></li>
-        <li class="recipe main-courses"><a href="HTML/main_courses/Saumon Ã  la ProvenÃ§ale.html">Saumon Ã  la ProvenÃ§ale</a></li>
+        <li class="recipe basics"><a href="HTML/basics/Sauce Béchamel.html">Sauce Béchamel</a></li>
+        <li class="recipe main-courses"><a href="HTML/main_courses/Saumon à la Provençale.html">Saumon à la Provençale</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Saumon aux Poivrons.html">Saumon aux Poivrons</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Scones.html">Scones</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Semoule.html">Semoule</a></li>
         <li class="recipe ice-creams"><a href="HTML/ice_creams/Sorbet Fraise Rhubarbe.html">Sorbet Fraise Rhubarbe</a></li>
         <li class="recipe ice-creams"><a href="HTML/ice_creams/Sorbet Poivrons Rouges et Tuiles Parmesan.html">Sorbet Poivrons Rouges et Tuiles Parmesan</a></li>
-        <li class="recipe ice-creams"><a href="HTML/ice_creams/Sorbet Ã  la Fraise.html">Sorbet Ã  la Fraise</a></li>
+        <li class="recipe ice-creams"><a href="HTML/ice_creams/Sorbet à la Fraise.html">Sorbet à la Fraise</a></li>
         <li class="recipe ice-creams"><a href="HTML/ice_creams/Sorbet au Chocolat.html">Sorbet au Chocolat</a></li>
         <li class="recipe starters"><a href="HTML/starters/Soupe au Pistou.html">Soupe au Pistou</a></li>
-        <li class="recipe starters"><a href="HTML/starters/Soupe de LÃ©gume.html">Soupe de LÃ©gume</a></li>
-        <li class="recipe main-courses"><a href="HTML/main_courses/TaboulÃ© Libanais.html">TaboulÃ© Libanais</a></li>
+        <li class="recipe starters"><a href="HTML/starters/Soupe de Légume.html">Soupe de Légume</a></li>
+        <li class="recipe main-courses"><a href="HTML/main_courses/Taboulé Libanais.html">Taboulé Libanais</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Tacos de Marie.html">Tacos de Marie</a></li>
         <li class="recipe main-courses"><a href="HTML/main_courses/Tajine d'Agneau.html">Tajine d'Agneau</a></li>
         <li class="recipe starters"><a href="HTML/starters/Tapenade Olives Noires.html">Tapenade Olives Noires</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Tarte Tatin.html">Tarte Tatin</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/Tarte au Citron MeringuÃ©e.html">Tarte au Citron MeringuÃ©e</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Tarte au Citron Meringuée.html">Tarte au Citron Meringuée</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Tartes aux Fruits.html">Tartes aux Fruits</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Tiramisu Classique.html">Tiramisu Classique</a></li>
-        <li class="recipe desserts"><a href="HTML/desserts/Tiramisu aux SpÃ©culos de Vinciane.html">Tiramisu aux SpÃ©culos de Vinciane</a></li>
+        <li class="recipe desserts"><a href="HTML/desserts/Tiramisu aux Spéculos de Vinciane.html">Tiramisu aux Spéculos de Vinciane</a></li>
         <li class="recipe desserts"><a href="HTML/desserts/Tuiles aux Amandes.html">Tuiles aux Amandes</a></li>
-        <li class="recipe starters"><a href="HTML/starters/VeloutÃ© de Courge d'Automne.html">VeloutÃ© de Courge d'Automne</a></li>
-        <li class="recipe starters"><a href="HTML/starters/VeloutÃ© de Courgette.html">VeloutÃ© de Courgette</a></li>
+        <li class="recipe starters"><a href="HTML/starters/Velouté de Courge d'Automne.html">Velouté de Courge d'Automne</a></li>
+        <li class="recipe starters"><a href="HTML/starters/Velouté de Courgette.html">Velouté de Courgette</a></li>
 </ul>
 
 </body>
