--- a/index_top.html
+++ b/index_top.html
@@ -18,6 +18,7 @@
             flex-direction: column;
             margin: 0;
             padding: 0;
+            padding-top: 2em;
             font-family: monotypeCorsiva;
         }
 
@@ -100,6 +101,30 @@
         label[for="breads"],
         .breads a {
             color: #8A4500;
+        }
+
+        nav {
+            font-family: Arial, sans-serif;
+            position: absolute;
+            display: flex;
+            top: 0;
+            right: 0;
+            margin-top: 0.2em;
+            margin-right: 0.4em;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        nav a {
+            text-decoration: none;
+            font-size: 1.2em;
+            padding: 0;
+            margin: 0.1em;
+        }
+
+        nav a img {
+            height: 1.6em;
         }
     </style>
 </head>
