--- a/index_top.html
+++ b/index_top.html
@@ -131,10 +131,10 @@
 
 <body>
     <nav>
-        <a id="fr" class="lang-button" href="index.html"><img src="fr.png" alt="🇫🇷"></a>
-        <a id="en" class="lang-button" href="index-en.html"><img src="en.png" alt="🇬🇧"></a>
-        <a id="es" class="lang-button" href="index-sp.html"><img src="sp.png" alt="🇪🇸"></a>
-        <a id="it" class="lang-button" href="index-it.html"><img src="it.png" alt="🇮🇹"></a>
+        <a href="index.html"><img src="fr.png" alt="🇫🇷"></a>
+        <a href="index-en.html"><img src="en.png" alt="🇬🇧"></a>
+        <a href="index-sp.html"><img src="sp.png" alt="🇪🇸"></a>
+        <a href="index-it.html"><img src="it.png" alt="🇮🇹"></a>
     </nav>
     <img src="logo.svg" alt="logo" width="200" height="200">
     <h1>Yo! Recipes!</h1>
