--- a/HTML/desserts/Merveille Framboises Pistache.html
+++ b/HTML/desserts/Merveille Framboises Pistache.html
@@ -56,8 +56,8 @@
 </head>
 
 <body>
-    <!-- <a href="../../index.html" id="back-button">← Back  ↺</a> -->
-    <a href="../../index.html" id="back-button">Back to List</a>
+    <!-- <a href="../../fr.html" id="back-button">← Back  ↺</a> -->
+    <a href="../../fr.html" id="back-button">Back to List</a>
     <h1>Yo! Recipes!</h1>
     <div>
         <a href="../../PNG/desserts/Merveille Framboises Pistache.png"><img src="../../logo_png.svg" alt="png file" class="icon"></a>
